# Alasdair_Thesis

./: .gitignore  README.md
barrettHand/devel/: .catkin  local_setup.sh  setup.sh
barrettHand/devel/include/bhand_controller/: ActionsResponse.h  Service.h  SetControlModeResponse.h  TactileArray.h
barrettHand/devel/include/wam_srvs/: BHandFingerPos.h  BHandFingerVelRequest.h  BHandFingerVelResponse.h  BHandGraspVel.h  BHandSpreadVel.h  GravityCompRequest.h  HoldResponse.h  LASERControlRequest.h  LEDControlResponse.h  OrtnMoveRequest.h  PoseMove.h
barrettHand/devel/lib/barrett_hand_node/: barrett_hand_node
barrettHand/devel/lib/bhand_controller/: bhand_node.py  pyHand_api.py
barrettHand/devel/lib/perception_palm/: perception_palm_node
barrettHand/devel/lib/pkgconfig/: barrett_hand_node.pc  bhand_controller.pc  perception_palm.pc  rqt_bhand.pc  wam_demos.pc  wam_msgs.pc  wam_node.pc  wam_srvs.pc  wam_teleop.pc
barrettHand/devel/lib/wam_demos/: play  (+1 more)
barrettHand/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
setup/: Notes.txt  Setup.txt  baxter.srdf  joint_compare.py
setup/Backup/: baxter.urdf  left_end_effector.urdf.xacro
setup/Backup/baxter_moveit_config/: .setup_assistant  package.xml
ws_AF/: baxter.sh  execution.csv  hello.csv  minion.csv  playback.csv  playback2.csv  test.csv
ws_AF/install/: .rosinstall  local_setup.sh
ws_AF/src/baxter/barrett_hand_control/: CMakeLists.txt  package.xml
ws_AF/src/baxter/barrett_hand_control/launch/: barrett_hand_control.launch
ws__AF/: trial2.csv
ws__AF/install/: _setup_util.py  setup.sh
(+270 files in other folders)
