<?xml version="1.0"?>
<package>
  <name>barrett_hand_control</name>
  <version>0.0.0</version>
  <description>The barrett_hand_control package</description>

  <maintainer email="kuri@todo.todo">kuri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Replace these with actual dependencies you need -->
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

  <export>
    <controller_interface plugin="${prefix}/barrett_hand_controllers_plugins.xml"/>
  </export>
</package>
